fixed spacing and added fade effect

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ h1{
 	line-height: 100px;
 	top: 20px;
 	width: 100%;
+	padding-top: 10px;
 }
 
 h2{
@@ -38,6 +39,7 @@ h2{
 	font-size: 35px;
 	line-height: 100px;
 	padding-left: 150px;
+	padding-top: 10px;
 	position: relative;
 	color: #E0001E;
 	width: 100%;
@@ -81,6 +83,41 @@ link-style{
 	text-decoration: none;
 }
 
+#main-1 {
+	animation: fadeIn ease 3s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn{
+    0% { opacity:0; }
+    100% { opacity:1; }
+}
+
+#main-2 {
+	animation: fadeInDelay ease 3s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadeInDelay{
+    0% { opacity:0; }
+    20% { opacity:0; }
+    100% { opacity:1; }
+}
+
+#main-3 {
+	animation: fadeInMoreDelay ease 3s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadeInMoreDelay{
+    0% { opacity:0; }
+    40% { opacity:0; }
+    100% { opacity:1; }
+}
+
 #main-covers, #illustration, #drawing, #art {
 	display: block;
 	position: relative;
@@ -110,6 +147,9 @@ link-style{
 	color: #A16363;
 }
 
+#illustration-link {
+	margin-top: 20px;
+}
 
 #illustration-link:hover {
 	color: #AD0017;
@@ -158,7 +198,7 @@ link-style{
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Stay on top */
 	top: 20px; /* Stay at the top */
-	padding-left: 20px;
+	padding-left: 30px;
 }
 
 .footer {
@@ -200,6 +240,7 @@ link-style{
 .indented {
 	padding-left: 150px;
 	padding-right: 50px;
+	padding-top: 10px;
 	margin: 0;
 }
 
@@ -306,13 +347,8 @@ link-style{
 	opacity: 0.6 ;
 }
 
-.goverlay:hover .extra-dark {
+.overlay:hover .extra-dark {
 	opacity: 0.8 ;
-}
-
-.overlay:hover .title {
-	transition: .7s ease;
-	opacity: 1;
 }
 
 .overlay:hover .dramatic {
@@ -329,6 +365,30 @@ link-style{
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
+}
+
+.overlay{
+	text-decoration: none;
+}
+
+.main-title {
+  /*transition: .5s ease;*/
+  opacity: 0;
+}
+
+.main-title span {
+    position: absolute;
+    top: 100%;
+    white-space: nowrap;
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.overlay:hover .main-title {
+	transition: 1s ease;
+	opacity: 1;
 }
 
 .modal {
@@ -396,8 +456,9 @@ link-style{
 }
 
 .text, .text-grey, .text-black {
-	font-size: 32px;
+	font-size: 28px;
 	font-weight: 300;
+	text-decoration: none;
 }
 
 .text {
@@ -479,6 +540,7 @@ link-style{
 	}
 
 	h1 {
+		font-size: 75px;
 		padding-top: 40px;
 	}
 
@@ -496,6 +558,7 @@ link-style{
 
 	.indented {
 		margin-top: 5vh;
+		padding-top: 0px;
 	}
 
 	.sidebar-links {
@@ -547,7 +610,7 @@ link-style{
 @media (max-width: 1000px) {
 
 	h1{
-		font-size:60px;
+		font-size:30px;
 	}
 
 	header{
@@ -566,16 +629,20 @@ link-style{
 
 @media (max-width: 650px) {
 	h1{
-		font-size:50px;
+		font-size:28px;
 	}
 
 	h2{
-		font-size:40px;
+		font-size:28px;
 	}
 
 	header{
 		text-align: left;
 		padding-left: 150px;
+	}
+
+	.sidenav{
+		padding-left: 20px;
 	}
 
 }
@@ -593,12 +660,12 @@ link-style{
 	}
 
 	h1{
-		font-size:40px;
+		font-size:28px;
 		line-height:100px;
 	}
 
 	h2{
-		font-size:35px;
+		font-size:28px;
 		padding-left: 100px;
 		width: 100%;
 	}
@@ -641,8 +708,13 @@ link-style{
 		margin-top: 30px;
 	}
 
+	#illustration-link {
+		margin-top: 5px;
+	}
+
 	.indented {
 		padding-left: 100px;
+		padding-top: 0px;
 	}
 
 	.main {
@@ -671,7 +743,7 @@ link-style{
 
 @media (max-width: 350px) {
 	h1{
-		font-size:30px;
+		font-size:28px;
 		line-height:100px;
 	}
 }
@@ -693,10 +765,19 @@ link-style{
 
 	.sidenav {
 		max-height: 100vh;
+		padding-left: 20px;
+	}
+
+	.indented {
+		padding-top: 0px;
+	}
+
+	#illustration-link {
+		margin-top: 0px;
 	}
 
 	h2{
-		font-size:30px;
+		font-size:28px;
 		padding-left: 100px;
 		width: 100%;
 	}
